--- a/.themes/zx1986/source/_includes/custom/header.html
+++ b/.themes/zx1986/source/_includes/custom/header.html
@@ -1,6 +1,13 @@
 <hgroup>
+  <div id="logo">
+  	<div id="logoLeft">{</div>
+  	<div id="logoText">zx1986</div>
+  	<div id="logoRight">}</div>
+  	<div class="clear"></div>
+  </div>
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
-    <span>{{ site.subtitle }}</span>
+    <h2>{{ site.subtitle }}</h2>
   {% endif %}
+  <div class="clear"></div>
 </hgroup>
