change layout of page

--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -3,18 +3,14 @@ layout: default
 ---
 
 <div>
-
 <article role="article">
-
   {% if page.title %}
   <header>
-    <h1 class="entry-title">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
+    <h1 class="entry-title go-to-center">{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</h1>
     {% if page.date %}<p class="meta">{% include post/date.html %}{{ time }}</p>{% endif %}
   </header>
   {% endif %}
-
   {{ content }}
-
   {% unless page.footer == false %}
     <footer>
       {% if page.date or page.author %}<p class="meta">
@@ -27,18 +23,14 @@ layout: default
       {% endunless %}
     </footer>
   {% endunless %}
-
 </article>
-
 {% if site.disqus_short_name and page.comments == true %}
   <section>
     <h1>Comments</h1>
     <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
   </section>
 {% endif %}
-
 </div>
-
 {% unless page.sidebar == false %}
 <aside class="sidebar">
   {% if site.page_asides.size %}
