--- a/assets/stylesheets/custom/_styles.scss
+++ b/assets/stylesheets/custom/_styles.scss
@@ -1,6 +1,14 @@
 // This File is imported last, and will override other styles in the cascade
 // Add styles here to make changes without digging in too much
 
-a :hover {
+body {
+    font-color: black;
+}
+
+a, a:hover {
     text-decoration: none;
+}
+
+aside.sidebar > ul:hover {
+    color: black;
 }
