--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -3,4 +3,8 @@
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
   {% endif %}
+  <h2 class="looking-for-job">
+    I am looking for a job, give me a chance
+    <span> to work with you. <i class="icon-smile"></i></span>
+  </h2>
 </hgroup>
