--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,15 +1,7 @@
 ---
 layout: default
-comments: false
 ---
-<div class="post">
-
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-
-  <article class="post-content">
+<article class="post">
+    <h2 class="post-header">{{ page.title }}</h2>
     {{ content }}
-  </article>
-
-</div>
+</article>
