--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <title>{{ site.title }}</title>
+
+    <link rel="shortcut icon" href="/img/favicons/favicon.ico">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/img/favicons/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/img/favicons/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/img/favicons/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/favicons/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/img/favicons/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16.png">
+    <link rel="apple-touch-icon" href="/img/favicons/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/favicons/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/favicons/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/favicons/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/favicons/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/favicons/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/favicon-180.png">
+    <meta name="msapplication-TileColor" content="#FFFFFF">
+    <meta name="msapplication-TileImage" content="/img/favicons/favicon-144.png">
+    <meta name="msapplication-config" content="/browserconfig.xml">
 </head>
 <body>
     <main>
         <header class="site-header">
             <h1 class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
             <nav class="site-nav">
-                <a href="{{ site.baseurl }}/sample/" class="{% if page.url == '/sample/' %}active{% endif %}">Sample</a>
                 <a href="{{ site.baseurl }}/about/" class="{% if page.url == '/about/' %}active{% endif %}">About</a>
             </nav>
         </header>
