--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 
 @charset "utf-8";
 
-$base-font-family: Merriweather, Helvetica, Arial, sans-serif;
+$base-font-family: Inconsolata, Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  0.875rem;
 $base-line-height: 1.5;
@@ -14,7 +14,7 @@ $link-color:   #0074d9;
 $meta-color:   #a0a0a0;
 $border-color: #ddd;
 
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700);
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700,italic);
 @import "color";
 @import "base";
 @import "layout";
