--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
     <header class="site-header">
       <h1 class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
       <nav class="site-nav">
-        <a href="{{ site.baseurl }}/about/" class="{% if page.url == '/about/' %}active{% endif %}">關於</a>
+        <a href="{{ site.baseurl }}/about" class="{% if page.url == '/about' %}active{% endif %}">關於</a>
       </nav>
     </header>
     {{ content }}
