--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
       <nav class="site-nav">
         <a href="{{ site.baseurl }}/about" class="{% if page.url == '/about' %}active{% endif %}">關於</a>
       </nav>
+      <div class="clearfix"></div>
     </header>
     {{ content }}
   </main>
