使用 jekyll-last-modified-at 外掛為文章加上修改時間
https://github.com/gjtorikian/jekyll-last-modified-at
https://zzz.buzz/2016/02/13/add-an-updated-field-to-your-jekyll-site/

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,11 @@ layout: default
 ---
 <article class="post">
     <h2 class="post-header">{{ page.title }}</h2>
-    <p class="post-meta">{{ page.date | date: site.date_format }}</p>
+    <p class="post-meta posted_at">發表時間：{{ page.date | date: site.date_format }}</p>
+    <p class="post-meta updated_at">更新時間：{{ page.last_modified_at | date: site.date_format }}</p>
+
     {{ content }}
+
     {% if site.disqus_shortname %}
       <div id="disqus_thread"></div>
       <script type="text/javascript">
