--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="google-site-verification" content="51yAokTLmS_-AD4RwkcPXd4US3B4DTlzEJuXHcl_L1c" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <title>{{ site.title }}</title>
