--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,10 @@
 <html lang="zh-Hant-TW">
 
 <head>
+  {% if site.google_verify %}
+  <meta name="google-site-verification" content="{{ site.google_verify }}" />
+  {% endif %}
   <meta charset="UTF-8">
-  <meta name="google-site-verification" content="51yAokTLmS_-AD4RwkcPXd4US3B4DTlzEJuXHcl_L1c" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   <title>{{ site.title }}</title>
